# my-sales-helper

./: .env  INSTRUCOES_DESKTOP.md  get_columns.py  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml  rotate-updater-keys.yml
public/: sw.js
scripts/: rotate-updater-keys.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: AppLayout.tsx  ProtectedRoute.tsx
src/hooks/: useTheme.tsx
src/pages/: Auth.tsx  Cars.tsx  Fiado.tsx  FiadosPagos.tsx  Index.tsx  Mechanics.tsx  Products.tsx  QuoteDetail.tsx  QuoteNew.tsx  Quotes.tsx  Sellers.tsx  Settings.tsx
supabase/: config.toml
supabase/migrations/: 20260425151127_7c56cd91-ae43-4600-ba87-b8f20cd2d18a.sql  20260425180242_dff6e6a2-fdc8-4c0b-bce2-89433464906d.sql  20260425190052_54879174-36b6-4969-acb8-4c0850be15b6.sql  20260425190302_670051e3-2aa0-4a2a-86d1-d8e10cb2564e.sql  20260425193928_dd45e89c-a358-4305-a22e-1f767e0ea84e.sql  20260425195013_ac93778d-fe3c-4f66-9a9c-db4a8baa479e.sql  20260425201613_78bf7ad6-c2e9-4662-bb54-67c707d97b5e.sql  20260425203545_383663c6-e620-4ebd-aa10-cdb0bf1ca83b.sql  20260425203635_c4373e7e-7230-4356-86dd-12ad65e73d36.sql  20260508165625_e8aedf89-e11b-464d-b129-600bacb6a913.sql  20260508172152_ea1de4a7-6660-4438-9c3e-1753c0e862ab.sql  20260508185939_cae5870d-a76a-4ad2-8b11-49706abd3bdd.sql  20260508212407_fc1e4556-8851-4603-a977-05fc75182bec.sql  20260508212419_a9d3625c-5098-4b6d-b59f-963485e6326b.sql  (+10 more)
(+3 files in other folders)
