[package]
name = "venda-facil"
version = "0.1.0"
description = "Venda Fácil Desktop App"
authors = ["Lovable"]
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
