[package]
name = "venda-facil"
version = "0.1.0"
description = "Venda Fácil Desktop App"
authors = ["Lovable"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
